--- a/In_code_file/In_code_ver1.ipynb
+++ b/In_code_file/In_code_ver1.ipynb
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ed31b518",
    "metadata": {},
    "outputs": [],
@@ -19898,7 +19898,9 @@
    "id": "be6e2c38",
    "metadata": {},
    "source": [
-    "#### business_unit vs is_converted"
+    "#### 범주형 변수 business_unit과 타깃 변수 is_converted와의 관계 \n",
+    "#### business_unit 내의 그룹 중에서 어떤 그룹이 고객 전환 여부에 영향을 끼칠지 파악\n",
+    "#### 이를 위해 business_unit 내 그룹 대비 is_converted의 비율을 계산해서 그래프 산출"
    ]
   },
   {
@@ -19969,7 +19971,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# business_unit이 ID일 때, 전환 고객 수가 가장 많음. 따라서, ID 그룹에 속하면 고객으로 전환될 가능성이 높다고 결론 내릴 수 있음. "
+    "# business_unit이 ID일 때, 전환 고객 수가 가장 많음. \n",
+    "# 따라서, ID 그룹에 속하면 고객으로 전환될 가능성이 높다고 결론 내릴 수 있음. \n",
+    "# 범주형 변수 껴 있을 때, 이런 식으로 EDA 하길래 따라 해봄.  "
    ]
   },
   {
