--- a/In_code_file/In_code_ver1.ipynb
+++ b/In_code_file/In_code_ver1.ipynb
@@ -931,7 +931,8 @@
    "id": "d9b948e7",
    "metadata": {},
    "source": [
-    "#### 범주형 변수 속 카테고리 개수 파악"
+    "#### 범주형 변수 속 그룹 개수 파악\n",
+    "#### ex : business_unit은 5개의 그룹으로 나뉨"
    ]
   },
   {
@@ -1010,7 +1011,11 @@
    "id": "27d3df60",
    "metadata": {},
    "source": [
-    "#### 범주형 변수 파악 "
+    "#### 범주형 변수 파악 \n",
+    "#### df_train['bant_submit'].value_counts()으로 하면, \n",
+    "#### 중간에 짤리는 부분이 생겨서 아예 데이터프레임 형식으로 만들어갖고\n",
+    "#### 중간에 짤리는 부분 없이 온전히 볼 수 있게 했음.\n",
+    "#### 범주형만 해봤음. "
    ]
   },
   {
@@ -19863,7 +19868,9 @@
    "id": "a3a0c6cc",
    "metadata": {},
    "source": [
-    "#### 타깃 변수 비율 비교 "
+    "#### 타깃 변수 비율 비교 \n",
+    "#### 레이블 불균형 때문에 확인해봤음. \n",
+    "#### 오버샘플링 vs 언더샘플링 논의해봐야함. "
    ]
   },
   {
