--- a/June_code_file/June_code_ver1.ipynb
+++ b/June_code_file/June_code_ver1.ipynb
@@ -1530,6 +1530,7 @@
    ],
    "source": [
     "# 'inquiry_type' 열의 같은내용에 대해 일관된 값으로 변환\n",
+    "## Ctrl + Shift + [ : 현재 영역 접기\n",
     "df_train['inquiry_type'] = df_train['inquiry_type'].replace({\n",
     "    'Quotation or purchase consultation': 'Quotation or Purchase Consultation',\n",
     "    'Product Information': 'Product Information',\n",
@@ -1625,7 +1626,7 @@
    "outputs": [],
    "source": [
     "# 전반적인 데이터 출력되도록\n",
-    "pd.set_option('display.max_rows', None)"
+    "# pd.set_option('display.max_rows', None)"
    ]
   },
   {
