--- a/Ch4_modeling.ipynb
+++ b/Ch4_modeling.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 85,
       "id": "a315cc58",
       "metadata": {
         "id": "a315cc58"
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 86,
       "id": "38ccd6b1",
       "metadata": {},
       "outputs": [],
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 87,
       "id": "0b323c11",
       "metadata": {},
       "outputs": [
@@ -125,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 88,
       "id": "596c0909",
       "metadata": {},
       "outputs": [],
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 89,
       "id": "e0437e17",
       "metadata": {},
       "outputs": [
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 90,
       "id": "b53d4d09",
       "metadata": {},
       "outputs": [],
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 91,
       "id": "ca62d87e",
       "metadata": {},
       "outputs": [
@@ -239,22 +239,22 @@
             " 5   customer_type             59299 non-null  int64  \n",
             " 6   enterprise                59299 non-null  int64  \n",
             " 7   historical_existing_cnt   59299 non-null  float64\n",
-            " 8   idit_strategic_ver        59299 non-null  float64\n",
-            " 9   customer_job              59299 non-null  int64  \n",
-            " 10  lead_desc_length          59299 non-null  int64  \n",
-            " 11  product_category          59299 non-null  int64  \n",
-            " 12  customer_country.1        59299 non-null  int64  \n",
-            " 13  customer_position         59299 non-null  int64  \n",
-            " 14  response_corporate        59299 non-null  int64  \n",
-            " 15  expected_timeline         59299 non-null  int64  \n",
-            " 16  ver_win_rate_x            59299 non-null  float64\n",
-            " 17  ver_win_ratio_per_bu      59299 non-null  float64\n",
-            " 18  lead_owner                59299 non-null  int64  \n",
-            " 19  is_converted              59299 non-null  bool   \n",
-            " 20  ver_cus_business_area     59299 non-null  int64  \n",
-            " 21  ver_pro_product_category  59299 non-null  int64  \n",
-            " 22  id_business_area          59299 non-null  float64\n",
-            " 23  it_business_area          59299 non-null  float64\n",
+            " 8   customer_job              59299 non-null  int64  \n",
+            " 9   lead_desc_length          59299 non-null  int64  \n",
+            " 10  customer_country.1        59299 non-null  int64  \n",
+            " 11  customer_position         59299 non-null  int64  \n",
+            " 12  response_corporate        59299 non-null  int64  \n",
+            " 13  expected_timeline         59299 non-null  int64  \n",
+            " 14  lead_owner                59299 non-null  int64  \n",
+            " 15  is_converted              59299 non-null  bool   \n",
+            " 16  id_business_area          59299 non-null  float64\n",
+            " 17  it_business_area          59299 non-null  float64\n",
+            " 18  idit_business_area        59299 non-null  float64\n",
+            " 19  ver_cus_business_area     59299 non-null  int64  \n",
+            " 20  ver_pro_product_category  59299 non-null  int64  \n",
+            " 21  ver_win_business_area     59299 non-null  float64\n",
+            " 22  ver_ratio_business_area   59299 non-null  float64\n",
+            " 23  category_modelname        59299 non-null  int64  \n",
             "dtypes: bool(1), float64(8), int64(15)\n",
             "memory usage: 10.5 MB\n"
           ]
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 92,
       "id": "7af1b057",
       "metadata": {},
       "outputs": [],
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 93,
       "id": "b5be751e",
       "metadata": {
         "id": "b5be751e"
@@ -374,7 +374,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 94,
       "id": "478def87",
       "metadata": {},
       "outputs": [],
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 95,
       "id": "9193fac9",
       "metadata": {
         "id": "9193fac9"
@@ -436,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 96,
       "id": "9df5f040",
       "metadata": {
         "colab": {
@@ -450,9 +450,9 @@
         {
           "data": {
             "text/html": [
-              "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LGBMClassifier(learning_rate=0.06987263978834855, max_depth=19,\n",
+              "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LGBMClassifier(learning_rate=0.06987263978834855, max_depth=19,\n",
               "               min_child_samples=27, n_estimators=409, num_leaves=106,\n",
-              "               verbose=-1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LGBMClassifier</label><div class=\"sk-toggleable__content\"><pre>LGBMClassifier(learning_rate=0.06987263978834855, max_depth=19,\n",
+              "               verbose=-1)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LGBMClassifier</label><div class=\"sk-toggleable__content\"><pre>LGBMClassifier(learning_rate=0.06987263978834855, max_depth=19,\n",
               "               min_child_samples=27, n_estimators=409, num_leaves=106,\n",
               "               verbose=-1)</pre></div></div></div></div></div>"
             ],
@@ -462,7 +462,7 @@
               "               verbose=-1)"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 96,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 97,
       "id": "c8871444",
       "metadata": {
         "id": "c8871444"
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 98,
       "id": "56a86373",
       "metadata": {
         "colab": {
@@ -571,8 +571,8 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>True</th>\n",
-              "      <td>738</td>\n",
-              "      <td>209</td>\n",
+              "      <td>737</td>\n",
+              "      <td>210</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>False</th>\n",
@@ -585,7 +585,7 @@
             ],
             "text/plain": [
               "       True  False\n",
-              "True    738    209\n",
+              "True    737    210\n",
               "False    60  10853"
             ]
           },
@@ -630,11 +630,11 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0.977319</td>\n",
-              "      <td>0.924812</td>\n",
-              "      <td>0.779303</td>\n",
-              "      <td>0.845845</td>\n",
-              "      <td>0.977319</td>\n",
+              "      <td>0.977234</td>\n",
+              "      <td>0.924718</td>\n",
+              "      <td>0.778247</td>\n",
+              "      <td>0.845183</td>\n",
+              "      <td>0.977234</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -642,7 +642,7 @@
             ],
             "text/plain": [
               "        정확도       정밀도       재현율  F1 Score  Micro F1\n",
-              "0  0.977319  0.924812  0.779303  0.845845  0.977319"
+              "0  0.977234  0.924718  0.778247  0.845183  0.977234"
             ]
           },
           "metadata": {},
@@ -676,7 +676,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 99,
       "id": "43daa73c",
       "metadata": {
         "id": "43daa73c"
@@ -689,7 +689,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 100,
       "id": "d13f7a6e",
       "metadata": {
         "colab": {
@@ -702,10 +702,10 @@
         {
           "data": {
             "text/plain": [
-              "461"
+              "510"
             ]
           },
-          "execution_count": 39,
+          "execution_count": 100,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -727,7 +727,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 101,
       "id": "3128a458",
       "metadata": {
         "id": "3128a458"
@@ -739,7 +739,7 @@
         "df_sub[\"is_converted\"] = test_pred\n",
         "\n",
         "# 제출 파일 저장\n",
-        "df_sub.to_csv(\"submission_ch3.csv\", index=False)"
+        "df_sub.to_csv(\"submission_model.csv\", index=False)"
       ]
     },
     {
