--- a/Ch2_data_processing.ipynb
+++ b/Ch2_data_processing.ipynb
@@ -5856,7 +5856,7 @@
         "grouped = df_train.groupby([\"business_area\",\"business_unit\"])\n",
         "\n",
         "# 'ver_win_ratio_per_bu' 열의 모든 값의 종류를 출력\n",
-        "print(grouped['ver_win_ratio_per_bu'].apply(lambda x: x.unique()))\n"
+        "print(grouped['ver_win_ratio_per_bu'].apply(lambda x: x.unique()))"
       ]
     },
     {
