--- a/Ch3_feature_engineering.ipynb
+++ b/Ch3_feature_engineering.ipynb
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 1,
       "id": "a315cc58",
       "metadata": {
         "id": "a315cc58"
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 2,
       "id": "38ccd6b1",
       "metadata": {},
       "outputs": [],
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 3,
       "id": "3ebe01a0",
       "metadata": {},
       "outputs": [
@@ -133,7 +133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": 4,
       "id": "596c0909",
       "metadata": {},
       "outputs": [],
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 5,
       "id": "e0437e17",
       "metadata": {},
       "outputs": [
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 6,
       "id": "881a4612",
       "metadata": {
         "id": "881a4612"
@@ -268,7 +268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 7,
       "id": "91fdda49",
       "metadata": {
         "id": "91fdda49"
@@ -310,7 +310,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 8,
       "id": "1885d199",
       "metadata": {
         "colab": {
@@ -334,7 +334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 9,
       "id": "8Ps3ylxryrRw",
       "metadata": {
         "colab": {
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 10,
       "id": "yKXlOUOyym9H",
       "metadata": {
         "id": "yKXlOUOyym9H"
@@ -459,7 +459,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 11,
       "id": "f073d266",
       "metadata": {},
       "outputs": [
@@ -517,7 +517,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 12,
       "id": "583f1041",
       "metadata": {},
       "outputs": [
@@ -583,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 13,
       "id": "5MOqmK4v1j-v",
       "metadata": {
         "id": "5MOqmK4v1j-v"
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 14,
       "id": "3f107eb9",
       "metadata": {
         "colab": {
@@ -627,32 +627,32 @@
           "output_type": "stream",
           "text": [
             "                          Importance\n",
-            "customer_idx                0.873030\n",
-            "lead_owner                  0.246680\n",
-            "ver_ratio_business_area     0.229190\n",
-            "customer_country.1          0.211443\n",
-            "customer_type               0.209935\n",
-            "response_corporate          0.187375\n",
-            "business_unit               0.166339\n",
-            "ver_win_business_area       0.146799\n",
-            "id_business_area            0.130752\n",
-            "lead_desc_length            0.125226\n",
-            "historical_existing_cnt     0.123687\n",
-            "com_reg_ver_win_rate        0.109241\n",
-            "idit_business_area          0.094235\n",
-            "product_category            0.091101\n",
-            "enterprise                  0.088676\n",
-            "category_modelname          0.087935\n",
-            "expected_timeline           0.086663\n",
-            "customer_country            0.086073\n",
-            "product_modelname           0.085599\n",
-            "customer_job                0.082348\n",
-            "it_business_area            0.081153\n",
-            "customer_position           0.077164\n",
-            "ver_pro_product_category    0.074307\n",
-            "ver_cus_business_area       0.073795\n",
-            "bant_submit                 0.069824\n",
-            "inquiry_type                0.067528\n"
+            "customer_idx                1.488035\n",
+            "ver_ratio_business_area     0.414381\n",
+            "lead_owner                  0.413986\n",
+            "business_unit               0.337951\n",
+            "customer_type               0.330842\n",
+            "ver_win_business_area       0.326956\n",
+            "customer_country.1          0.275964\n",
+            "response_corporate          0.263463\n",
+            "lead_desc_length            0.207645\n",
+            "historical_existing_cnt     0.202812\n",
+            "com_reg_ver_win_rate        0.193267\n",
+            "product_category            0.185405\n",
+            "idit_business_area          0.175941\n",
+            "id_business_area            0.157406\n",
+            "bant_submit                 0.154485\n",
+            "product_modelname           0.138805\n",
+            "expected_timeline           0.138361\n",
+            "customer_position           0.129319\n",
+            "inquiry_type                0.128902\n",
+            "customer_country            0.127936\n",
+            "category_modelname          0.125133\n",
+            "enterprise                  0.121105\n",
+            "customer_job                0.115588\n",
+            "ver_pro_product_category    0.113306\n",
+            "ver_cus_business_area       0.111181\n",
+            "it_business_area            0.100874\n"
           ]
         }
       ],
@@ -670,7 +670,7 @@
         "# 데이터셋 준비\n",
         "dtrain = xgb.DMatrix(X_train, label=y_train)\n",
         "param = {'max_depth': 8, 'learning_rate': 0.1}\n",
-        "num_round = 500\n",
+        "num_round = 300\n",
         "bst = xgb.train(param, dtrain, num_round)\n",
         "\n",
         "# 특성 중요도 확인\n",
@@ -695,7 +695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": 15,
       "id": "651eb25d",
       "metadata": {
         "colab": {
@@ -752,7 +752,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 16,
       "id": "e35f725b",
       "metadata": {
         "colab": {
@@ -810,7 +810,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 17,
       "id": "e978dc51",
       "metadata": {
         "colab": {
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 18,
       "id": "ff10c5fb",
       "metadata": {
         "colab": {
@@ -924,7 +924,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 19,
       "id": "3b6b0816",
       "metadata": {},
       "outputs": [],
@@ -935,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 20,
       "id": "qcMoSqXIwLDO",
       "metadata": {
         "colab": {
@@ -995,7 +995,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 21,
       "id": "d6774c4d",
       "metadata": {},
       "outputs": [],
@@ -1006,7 +1006,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 22,
       "id": "a67831a0",
       "metadata": {},
       "outputs": [
@@ -1059,7 +1059,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 23,
       "id": "70f6d64e",
       "metadata": {},
       "outputs": [],
@@ -1070,7 +1070,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 24,
       "id": "44c4307e",
       "metadata": {},
       "outputs": [
@@ -1079,29 +1079,30 @@
           "output_type": "stream",
           "text": [
             "    VIF Factor                  features\n",
-            "0     5.595430               bant_submit\n",
-            "1     5.954715          customer_country\n",
-            "2     3.727497             business_unit\n",
-            "3     1.947897      com_reg_ver_win_rate\n",
-            "4     4.497771              customer_idx\n",
-            "5     7.849115             customer_type\n",
-            "6     1.889903                enterprise\n",
-            "7     1.193921   historical_existing_cnt\n",
-            "8     5.367066              customer_job\n",
-            "9     1.506556          lead_desc_length\n",
-            "10    3.627167        customer_country.1\n",
-            "11    5.354593         customer_position\n",
-            "12    8.213844        response_corporate\n",
-            "13    7.002530         expected_timeline\n",
-            "14    3.038005                lead_owner\n",
-            "15    1.412525          id_business_area\n",
-            "16    2.365487          it_business_area\n",
-            "17    2.641205        idit_business_area\n",
-            "18    1.366569     ver_cus_business_area\n",
-            "19    1.414004  ver_pro_product_category\n",
-            "20    2.050777     ver_win_business_area\n",
-            "21    1.626109   ver_ratio_business_area\n",
-            "22    5.110243        category_modelname\n"
+            "0     6.026510               bant_submit\n",
+            "1     6.019307          customer_country\n",
+            "2     3.963114             business_unit\n",
+            "3     1.951518      com_reg_ver_win_rate\n",
+            "4     4.541368              customer_idx\n",
+            "5     9.281333             customer_type\n",
+            "6     1.890658                enterprise\n",
+            "7     1.194043   historical_existing_cnt\n",
+            "8     5.398614              customer_job\n",
+            "9     1.508051          lead_desc_length\n",
+            "10   13.142997              inquiry_type\n",
+            "11    3.676327        customer_country.1\n",
+            "12    5.428556         customer_position\n",
+            "13    8.337713        response_corporate\n",
+            "14    7.075806         expected_timeline\n",
+            "15    3.048127                lead_owner\n",
+            "16    1.416209          id_business_area\n",
+            "17    2.365521          it_business_area\n",
+            "18    2.641648        idit_business_area\n",
+            "19    1.368297     ver_cus_business_area\n",
+            "20    1.415464  ver_pro_product_category\n",
+            "21    2.055431     ver_win_business_area\n",
+            "22    1.635041   ver_ratio_business_area\n",
+            "23    5.291676        category_modelname\n"
           ]
         }
       ],
@@ -1132,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 25,
       "id": "abb98485",
       "metadata": {
         "colab": {
@@ -1148,7 +1149,7 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 59299 entries, 0 to 59298\n",
-            "Data columns (total 24 columns):\n",
+            "Data columns (total 25 columns):\n",
             " #   Column                    Non-Null Count  Dtype  \n",
             "---  ------                    --------------  -----  \n",
             " 0   bant_submit               59299 non-null  float64\n",
@@ -1161,22 +1162,23 @@
             " 7   historical_existing_cnt   59299 non-null  float64\n",
             " 8   customer_job              59299 non-null  int32  \n",
             " 9   lead_desc_length          59299 non-null  int64  \n",
-            " 10  customer_country.1        59299 non-null  int32  \n",
-            " 11  customer_position         59299 non-null  int32  \n",
-            " 12  response_corporate        59299 non-null  int32  \n",
-            " 13  expected_timeline         59299 non-null  int32  \n",
-            " 14  lead_owner                59299 non-null  int64  \n",
-            " 15  is_converted              59299 non-null  bool   \n",
-            " 16  id_business_area          59299 non-null  float64\n",
-            " 17  it_business_area          59299 non-null  float64\n",
-            " 18  idit_business_area        59299 non-null  float64\n",
-            " 19  ver_cus_business_area     59299 non-null  int64  \n",
-            " 20  ver_pro_product_category  59299 non-null  int64  \n",
-            " 21  ver_win_business_area     59299 non-null  float64\n",
-            " 22  ver_ratio_business_area   59299 non-null  float64\n",
-            " 23  category_modelname        59299 non-null  int32  \n",
-            "dtypes: bool(1), float64(8), int32(10), int64(5)\n",
-            "memory usage: 8.2 MB\n"
+            " 10  inquiry_type              59299 non-null  int32  \n",
+            " 11  customer_country.1        59299 non-null  int32  \n",
+            " 12  customer_position         59299 non-null  int32  \n",
+            " 13  response_corporate        59299 non-null  int32  \n",
+            " 14  expected_timeline         59299 non-null  int32  \n",
+            " 15  lead_owner                59299 non-null  int64  \n",
+            " 16  is_converted              59299 non-null  bool   \n",
+            " 17  id_business_area          59299 non-null  float64\n",
+            " 18  it_business_area          59299 non-null  float64\n",
+            " 19  idit_business_area        59299 non-null  float64\n",
+            " 20  ver_cus_business_area     59299 non-null  int64  \n",
+            " 21  ver_pro_product_category  59299 non-null  int64  \n",
+            " 22  ver_win_business_area     59299 non-null  float64\n",
+            " 23  ver_ratio_business_area   59299 non-null  float64\n",
+            " 24  category_modelname        59299 non-null  int32  \n",
+            "dtypes: bool(1), float64(8), int32(11), int64(5)\n",
+            "memory usage: 8.4 MB\n"
           ]
         }
       ],
@@ -1186,7 +1188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 26,
       "id": "d0da4056",
       "metadata": {
         "colab": {
@@ -1202,7 +1204,7 @@
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 5271 entries, 0 to 5270\n",
-            "Data columns (total 25 columns):\n",
+            "Data columns (total 26 columns):\n",
             " #   Column                    Non-Null Count  Dtype  \n",
             "---  ------                    --------------  -----  \n",
             " 0   id                        5271 non-null   int64  \n",
@@ -1216,22 +1218,23 @@
             " 8   historical_existing_cnt   5271 non-null   float64\n",
             " 9   customer_job              5271 non-null   int32  \n",
             " 10  lead_desc_length          5271 non-null   int64  \n",
-            " 11  customer_country.1        5271 non-null   int32  \n",
-            " 12  customer_position         5271 non-null   int32  \n",
-            " 13  response_corporate        5271 non-null   int32  \n",
-            " 14  expected_timeline         5271 non-null   int32  \n",
-            " 15  lead_owner                5271 non-null   int64  \n",
-            " 16  is_converted              5271 non-null   bool   \n",
-            " 17  id_business_area          5271 non-null   float64\n",
-            " 18  it_business_area          5271 non-null   float64\n",
-            " 19  idit_business_area        5271 non-null   float64\n",
-            " 20  ver_cus_business_area     5271 non-null   int64  \n",
-            " 21  ver_pro_product_category  5271 non-null   int64  \n",
-            " 22  ver_win_business_area     5271 non-null   float64\n",
-            " 23  ver_ratio_business_area   5271 non-null   float64\n",
-            " 24  category_modelname        5271 non-null   int32  \n",
-            "dtypes: bool(1), float64(8), int32(10), int64(6)\n",
-            "memory usage: 787.7 KB\n"
+            " 11  inquiry_type              5271 non-null   int32  \n",
+            " 12  customer_country.1        5271 non-null   int32  \n",
+            " 13  customer_position         5271 non-null   int32  \n",
+            " 14  response_corporate        5271 non-null   int32  \n",
+            " 15  expected_timeline         5271 non-null   int32  \n",
+            " 16  lead_owner                5271 non-null   int64  \n",
+            " 17  is_converted              5271 non-null   bool   \n",
+            " 18  id_business_area          5271 non-null   float64\n",
+            " 19  it_business_area          5271 non-null   float64\n",
+            " 20  idit_business_area        5271 non-null   float64\n",
+            " 21  ver_cus_business_area     5271 non-null   int64  \n",
+            " 22  ver_pro_product_category  5271 non-null   int64  \n",
+            " 23  ver_win_business_area     5271 non-null   float64\n",
+            " 24  ver_ratio_business_area   5271 non-null   float64\n",
+            " 25  category_modelname        5271 non-null   int32  \n",
+            "dtypes: bool(1), float64(8), int32(11), int64(6)\n",
+            "memory usage: 808.3 KB\n"
           ]
         }
       ],
@@ -1241,7 +1244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 27,
       "id": "64de8580",
       "metadata": {},
       "outputs": [],
