--- a/Total_code.ipynb
+++ b/Total_code.ipynb
@@ -3414,9 +3414,9 @@
     "    n_estimators=100\n",
     "    , max_depth=48\n",
     "    , min_samples_split=3\n",
-    "\t\t, min_samples_leaf=1\n",
-    "\t\t, criterion='gini'\n",
-    "\t\t, random_state=0\n",
+    "    , min_samples_leaf=1\n",
+    "    , criterion='gini'\n",
+    "    , random_state=0\n",
     ")\n",
     "\n",
     "# 보팅 분류기 생성\n",
